--- a/estilos/style.css
+++ b/estilos/style.css
@@ -168,7 +168,7 @@ h3 {
 
 .section2 {
     min-height: 500px;
-    background-image: url(../img/section1.jpeg);
+    background-image: url(../img/section1.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
